tests/paczka1/fuzzy1/18914076.err
Error in line 8: nD5CBEowQyq S857 55,6
Error in line 14: SD8 S857 46,4
Error in line 11: WhdifqQDj A498 1,1
Error in line 7: B6jMn A498 98,6
Error in line 31: WhdifqQDj A498 70,0
Error in line 34: B6jMn S35 54,4
